test/sema/trait_objects/trait_object_method_call_arg_references_self.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
trait Foo {
  fn value(self: &Self, x: Self) {}
  fn out(self: &Self, x: &Self) {}
  fn ptr(self: &Self, x: *Self) {}
  fn mutPtr(self: &Self, x: *mut Self) {}
}

struct S {
  impl Foo;
}

fn main() {
  mut x: *mut impl Foo = gcMut(S{});

  // CHECK: [[# @LINE + 1 ]]:5: error: methods with parameters referecing 'Self' cannot be called on trait objects
  x.value(x);

  // CHECK: [[# @LINE + 1 ]]:5: error: methods with parameters referecing 'Self' cannot be called on trait objects
  x.out(x);

  // CHECK: [[# @LINE + 1 ]]:5: error: methods with parameters referecing 'Self' cannot be called on trait objects
  x.ptr(x);

  // CHECK: [[# @LINE + 1 ]]:5: error: methods with parameters referecing 'Self' cannot be called on trait objects
  x.mutPtr(x);
}
